k8s/delete/deployment-delete.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delete-deployment
  namespace: p-go-delete
  labels:
    app: delete-persona
spec:
  replicas: 2
  selector:
    matchLabels:
      app: delete-persona
  template:
    metadata:
      labels:
        app: delete-persona
    spec:
      nodeSelector:
        workload: delete
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - name: delete-container
          image: danysoftdev/p-go-delete:latest
          ports:
            - containerPort: 8080
