k8s/delete/pod-delete.yaml
apiVersion: v1
kind: Pod
metadata:
  name: delete-pod
  namespace: p-go-delete
  labels:
    app: delete-persona
spec:
  nodeSelector:
    workload: delete
  imagePullSecrets:
    - name: dockerhub-secret
  containers:
    - name: delete-container
      image: danysoftdev/p-go-delete:latest
      ports:
        - containerPort: 8080
