k8s/delete/service-delete.yaml
apiVersion: v1
kind: Service
metadata:
  name: delete-service
  namespace: p-go-delete
  labels:
    app: delete-persona
spec:
  selector:
    app: delete-persona
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8080
  type: ClusterIP
