k8s/delete/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personas-delete-ingress
  namespace: p-go-delete
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /eliminar(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: delete-service
                port:
                  number: 8085
